// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateDowntimePreview should render CreateDowntimePreview with correct one time duration based downtime values 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
    >
      <p
        class="StyledProps--font StyledProps--main label"
        style="width: 120px;"
        title="summary"
      >
        summary
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main value"
        >
          Starting on 2030-03-26 02:50 PM (Asia/Calcutta) for 30 Minutes
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateDowntimePreview should render CreateDowntimePreview with correct one time end time based downtime values 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
    >
      <p
        class="StyledProps--font StyledProps--main label"
        style="width: 120px;"
        title="summary"
      >
        summary
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main value"
        >
          Starting on 2030-03-26 02:50 PM (Asia/Calcutta) till 2030-03-26 03:07 PM
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateDowntimePreview should render CreateDowntimePreview with correct recurring downtime values 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main previewLabelAndValue"
    >
      <p
        class="StyledProps--font StyledProps--main label"
        style="width: 120px;"
        title="summary"
      >
        summary
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main value"
        >
          Starting on 2030-03-26 04:20 PM (Asia/Bangkok) for 30 Minutes
        </p>
        <p
          class="StyledProps--font StyledProps--main value"
        >
          Repeats after 2 Week until 2032-02-19 03:17 AM
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateDowntimePreview should render CreateDowntimePreview with empty value 1`] = `<div />`;
